Removed library argument from VHDLGenerator Changed HDLQuery results to Result<T> DetermineType now considers HDLForLoop Parameter Changed doGetVariableDeclarations to doGetVariables HDLObject now has a hasContainer function HDLRegisterConfig now includes a Definition for $clk and $rst and defaultClk() methods Removed name parameter from HDLLibrary resolve Added sanity check to HDLQualifiedName constructor EqualsMatcher now can also match if not match Added RWValidation